# rules_rust_with_c

./: .gitignore  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  build.rs  simple_sin.rs  simple_sin_test.cc
src/: lib.rs  main.rs  simple_sin.cc  simple_sin.h
